--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ djangorestframework-api-key==3.0.0
 drf-yasg==1.21.8
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
+requests==2.32.3
 sqlparse==0.5.3
