--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==5.1.5
 djangorestframework==3.15.2
 djangorestframework-api-key==3.0.0
 drf-yasg==1.21.8
+gunicorn==23.0.0
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 requests==2.32.3
