--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
     env_file: .env
     volumes:
       - static:/static
+      - ./logs:/app/logs
     depends_on:
       - db
     command: gunicorn --bind 0.0.0.0:8000 core.wsgi:application
